<resources>
    <string name="app_name">myDiabetes</string>
    <string name="slogan">Own your diabetes!</string>
    <string name="pref_key">myDiabetesAppPref</string>
    <string name="user_key">myDiabetesUser</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login here</string>
    <string name="don_t_have">Don\'t have an account? Register here</string>
    <string name="error_email_password">Please enter an email address and a password</string>
    <string name="error_email">Please enter an email address</string>
    <string name="error_password">Please enter a password</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="agree">By clicking below you agree to the Terms of Service and Privacy Policy</string>
    <string name="have_an_account_log_in">Have an account? Log in.</string>
    <string name="register">Register here</string>
    <string name="short_pass">Password too short, enter a minimum of 8 characters</string>
    <string name="api_cred">  Contains information from the Open Food Facts Database : https://uk.openfoodfacts.org/, which is made available here under the Open Database License (ODbL).</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_account">Creating account...</string>
    <string name="create_failed">Create account failed, please try again</string>
    <string name="logo_icon">Logo icon</string>
    <string name="account_setup">Account Setup</string>
    <string name="blood_sugar_measurement">Blood Sugar measurement :</string>
    <string name="mg_dl">mg/dL</string>
    <string name="carbohydrate_measurement">Carbohydrate measurement:</string>
    <string name="blood_sugar_target_ranges">Blood Sugar Target Ranges :</string>
    <string name="hypo">Hypo:</string>
    <string name="_4_0_mmol_l">4.0 mmol/L</string>
    <string name="_5_0_mol_l">5.0 mmol/L</string>
    <string name="bottom_target">Bottom Target :</string>
    <string name="top_target">Top Target:</string>
    <string name="_8_5_mml_l">8.5 mmol/L</string>
    <string name="hyper">Hyper:</string>
    <string name="_13_mmol_l">13 mmol/L</string>
    <string name="active_insulin_duration">Active Insulin Duration (hours):</string>
    <string name="_04_00">04:00</string>
    <string name="insulin_precision">Insulin Precision:</string>
    <string name="_0_1">0.1</string>
    <string name="carbohydrate_portion">Carbohydrate Portion:</string>
    <string name="_10">10</string>
    <string name="_10g">10g</string>
    <string name="carbohydrate_ratio_insulin_for_1_cp">Carbohydrate Ratio (insulin for 1 CP):</string>
    <string name="_4">4</string>
    <string name="correction_dosage_1_unit_of_insulin">Correction Dosage (1 unit of insulin):</string>
    <string name="_2_5_mmol_l">2.5 mmol/L</string>
    <string name="save_details">Save Details</string>
    <string name="what_shall_we_call_you">What shall we call you ?</string>
    <string name="name">Name</string>
    <string name="title_activity_account_setup">AccountSetupActivity</string>
    <string name="tab_basic">Basic</string>
    <string name="tab_medical">Medical</string>
    <string name="tab_time_blocks">Time Blocks</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="time_start">Time Start:</string>
    <string name="_00_00">00:00</string>
    <string name="time_end">Time End:</string>
    <string name="_08_00">08:00</string>
    <string name="start">Start</string>
    <string name="show_start_time">Show start time</string>
    <string name="end">End</string>
    <string name="show_end_time">Show end time</string>
    <string name="ratio">Ratio</string>
    <string name="show_ratio">Show ratio</string>
    <string name="create_successs">Create account successful!</string>
    <string name="add_entry">Add Entry</string>
    <string name="forum">Forum</string>
    <string name="home_fragment">This is the home fragment</string>
    <string name="this_is_the_forum_fragment">This is the forum fragment</string>
    <string name="this_is_the_add_entry_fragment">This is the add entry fragment</string>
    <string name="this_is_the_thread_fragment">This is the thread fragment</string>
    <string name="thread_fragment">Thread Fragment</string>
    <string name="threads">Threads</string>
    <string name="title">Title</string>
    <string name="show_thread_title">show thread title</string>
    <string name="description">Desc.</string>
    <string name="show_thread_description">show thread description</string>
    <string name="no_posts">No. posts</string>
    <string name="show_no_posts">show no. posts</string>
    <string name="add_new_thread">Add New Thread</string>
    <string name="thread_title">Thread Title</string>
    <string name="thread_description">Thread Description</string>
    <string name="add_thread">Add Thread</string>
    <string name="thread_title_here">Thread Title Here</string>
    <string name="thread_description_here">Thread description here</string>
    <string name="poster_name_here">Poster name here</string>
    <string name="food_item_here">Food item here</string>
    <string name="carbohydrates_per_100g">Carbohydrates per 100g:</string>
    <string name="carbohydrates_per_serving_xg">Carbohydrates per serving(xg) :</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="last_revised">Last Revised: May 01 2020</string>
    <string name="terms_1">Welcome to the myDiabetes mobile application. These Terms of Service, which include the Code of Conduct and the Privacy Policy, are a contract between you and myDiabetes. By creating your myDiabetes account and using this application, you are agreeing to these Terms of Service. If you do not agree to any of these terms, then you cannot use the myDiabetes application.</string>
    <string name="license_to_use">License to Use</string>
    <string name="terms_2">Subject to your agreement to and compliance with the terms of this Agreement, we grant you a non-exclusive, non-transferable, non-shareable, revocable limited license to use the Services (including the Software in connection with the Services) solely for your personal, non-commercial use to the Services in accordance with this Agreement.</string>
    <string name="need_account">You Need an Account</string>
    <string name="terms_3">To access the services of the myDiabetes application, you will need to register for an account.\nYou are responsible for all the activity that occurs on your account, and for keeping your account details confidential. If you share your account information with anyone, the other person may be able to take control of your account. If this occurs, we may not be able to determine who is the proper account holder. We will not have any liability to you (or anyone with whom you share your account information with), as a result of your (or their) actions under those circumstances.\nIf you discover that someone has used your account without your permission, you should report it using the details provided in the Help and Contact section.</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="terms_4">This code of conduct is designed purely for the (extremely rare) cases where users might abuse our services. We reserve the right to terminate your access to our application and our services if you breach the following terms.\nI. You cannot share your account: Each account must only be used by a single person at one time\nII. You cannot provide us with false information: You cannot use a false email address, impersonate others, or misrepresent your affiliation with others</string>
    <string name="terminate_right">Right to Terminate Accounts</string>
    <string name="terms_5">If we find that you are in breach of any of these terms, we reserve the right to terminate your right to access or use the myDiabetes application. We are not responsible for any loss, damage or harm related to your inability to access or use the myDiabetes application based on such termination.</string>
    <string name="cancel_terminate">How a User Can Cancel/Terminate their Account</string>
    <string name="terms_6">You can delete your myDiabetes account at any time in the Account Settings section. When you delete your account, we delete all individual content you have saved and your personal profile data. No further information from your account will be used. We are unable to retrieve specific details about individuals after completing this process.</string>
    <string name="app_license">Application License</string>
    <string name="terms_7">We are the owner, or licensee of all intellectual property rights for the myDiabetes application, which is protected by copyright laws and treaties around the world. All such rights are reserved.\nIn accessing the myDiabetes application, you agree that you will access its contents and use the Services only for your personal, non-commercial use. The myDiabetes application may not be downloaded, copied, reproduced, transmitted, sold or distributed without the prior written consent of the copyright holder. This excludes the downloading of the myDiabetes application for personal, non-commercial use only.</string>
    <string name="terms_change">Will These Terms Ever Change?</string>
    <string name="terms_8">We reserve the right to change these terms at any time. If we do, we will bring it to your attention, by sending you an email. Please note that your continued use of the Services after any change means that you agree with, and consent to be bound by the new Terms of Service. If you disagree with any changes in the Terms of Service and do not wish to be subject to the revised terms, you will need to delete your account and/or stop using the Services.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="terms_9">This application does not replace the relationship between you and your doctor/nurse. This application does not claim to be a solution to diabetes, but rather a support tool to use alongside your prescribed tools/medication from your doctor/nurse</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_10">We take the privacy of our users very seriously. You can learn how we handle your information when you use our Services, by reading our Privacy Policy. We encourage you to give the Privacy Policy a careful look because, by using our Services, you agree that myDiabetes can collect, use, and share your information consistent with that policy</string>
    <string name="general">General Terms</string>
    <string name="terms_11">I. Entire agreement: These Terms constitute the entire agreement between us and they may only be modified by written agreement between us and you. \nII. Governing law and jurisdiction: These Terms (and any non-contractual disputes/claims arising out of, or in connection with them) are subject to UK laws, without regard to choice or conflicts of law principles. \nIII. Non-assignment: You may not assign, sub-license or otherwise transfer any of your rights under these Terms. \nIV. Rights of third parties: Only the parties to these Terms of Service may seek to enforce them under the Contracts (Rights of Third PArties) Act 1999 \nV. Comments and complaints: We value any comments or complaints that you may have and we will always aim to fix problems where we can. If you have any questions, suggestions or complaints about the application or the content features, please let us know by contacting us.</string>
</resources>