<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainSections.SettingsSection.SettingsTermsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <!--Toolbar for the toolbar layout-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <!--ImageView to display the solo logo-->
            <ImageView
                android:maxWidth="@dimen/logo_w_h"
                android:src="@drawable/logo_icon"
                android:paddingEnd="15dp"
                android:paddingStart="0dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:contentDescription="@string/logo_icon"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/sv_terms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/terms_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/terms_of_service"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/last_revised"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/last_revised"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/license_to_use"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/ltu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/need_account"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/yna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/code_of_conduct"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/coc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_4"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/terminate_right"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/rta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/cancel_terminate"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/ucta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/app_license"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/al"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_7"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/terms_change"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_8"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/disclaimer"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/dis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_9"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/privacy_policy"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/pp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_10"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/terms_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/general"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/gen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_11"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>