<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_background"
    android:layout_marginTop="7dp"
    android:layout_marginStart="7dp"
    android:layout_marginEnd="7dp"
    android:padding="10dp"
    android:clickable="true"
    android:focusable="true">

    <!--TextViews for the start section-->
    <TextView
        android:id="@+id/startTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/start"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_viewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/show_start_time"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/startTitle"
        android:layout_marginStart="11dp" />

    <!--TextViews for the end section-->
    <TextView
        android:id="@+id/endTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_below="@+id/startTitle"
        android:text="@string/end"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_viewEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_viewStart"
        android:layout_below="@+id/tv_viewStart"
        android:gravity="start"
        android:text="@string/show_end_time"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp" />

    <!--TextViews for the ratio section-->
    <TextView
        android:id="@+id/ratioTile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_below="@+id/endTitle"
        android:text="@string/ratio"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_viewRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_viewEnd"
        android:layout_below="@+id/tv_viewEnd"
        android:gravity="start"
        android:text="@string/show_ratio"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp" />
</RelativeLayout>