<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_background"
    android:layout_marginTop="7dp"
    android:layout_marginStart="7dp"
    android:layout_marginEnd="7dp"
    android:padding="10dp"
    android:clickable="true"
    android:focusable="true">

    <!--TextViews for the title section-->
    <TextView
        android:id="@+id/threadTitle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/title"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_viewThreadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/show_thread_title"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/threadTitle"
        android:layout_marginStart="11dp" />

    <!--TextViews for the description section-->
    <TextView
        android:id="@+id/threadDesc"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_below="@+id/threadTitle"
        android:text="@string/description"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_viewThreadDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_viewThreadTitle"
        android:layout_below="@+id/tv_viewThreadTitle"
        android:lines="1"
        android:gravity="start"
        android:text="@string/show_thread_description"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp" />

    <!--TextViews for the no. posts section-->
    <TextView
        android:id="@+id/threadPosts"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_below="@+id/threadDesc"
        android:text="@string/no_posts"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_viewThreadPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_viewThreadDesc"
        android:layout_below="@+id/tv_viewThreadDesc"
        android:gravity="start"
        android:text="@string/show_no_posts"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp" />
</RelativeLayout>